@@ -15,21 +15,25 @@
     </properties>
 
     <dependencies>
+
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
             <version>17.0.14</version>
         </dependency>
+
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
             <version>17.0.14</version>
         </dependency>
+
         <dependency>
             <groupId>org.controlsfx</groupId>
             <artifactId>controlsfx</artifactId>
             <version>11.1.2</version>
         </dependency>
+
         <dependency>
             <groupId>com.dlsc.formsfx</groupId>
             <artifactId>formsfx-core</artifactId>
@@ -41,6 +45,7 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
         <dependency>
             <groupId>net.synedra</groupId>
             <artifactId>validatorfx</artifactId>
@@ -52,27 +57,32 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
             <version>2.2</version>
         </dependency>
+
     </dependencies>
 
     <build>
         <plugins>
+            <!-- Maven compiler goal -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -82,6 +92,8 @@
                     <target>17</target>
                 </configuration>
             </plugin>
+
+            <!-- Maven javaFX Shader goal -->
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
@@ -104,6 +116,8 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <!-- Maven JAR goal -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -118,39 +132,9 @@
                     </archive>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-antrun-plugin</artifactId>
-                <version>3.0.0</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                        <configuration>
-                            <target>
-                                <!-- Ensure the correct executable is used -->
-                                <exec executable="jpackage">
-                                    <arg value="--input"/>
-                                    <arg value="target"/>
-                                    <arg value="--name"/>
-                                    <arg value="output"/>
-                                    <arg value="--main-jar"/>
-                                    <arg value="PB_SubsystemCustomizer-1.0-SNAPSHOT.jar"/>
-                                    <arg value="--main-class"/>
-                                    <arg value="it.miketan.pb.serializer.Main"/>
-                                    <arg value="--type"/>
-                                    <arg value="app-image"/>
-                                    <arg value="--add-modules"/>
-                                    <arg value="javafx.controls,javafx.fxml"/>
-                                </exec>
-                            </target>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
 
+            <!-- Maven Assembler Goal -->
+            <!-- most indicated to create a standalone executable JAR with embedded dependencies -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
